--- a/configs/train/FHN_VSE_T3_visual_new.yaml
+++ b/configs/train/FHN_VSE_T3_visual_new.yaml
@@ -9,8 +9,10 @@ data_param:
   use_lmdb: true # use lmbd data
   use_semantic: false # use sentance data
   use_visual: true # use visual data
+  visual_encoding:  visual_encoding # item embedding storage
   # cate_selection: ["top", "bottom", "bag", "outerwear", "footwear"]
   cate_selection: ["top", "bottom", "bag", "outerwear", "accessory", "full-body", "footwear"]
+  transforms: false
   num_pairwise: [2, 3, 4]
   using_max_num_pairwise: true
 
@@ -29,7 +31,7 @@ net_param:
   num_users: 1 # number of users ##TODO: Later
   dim: 128 # dimension of binary codes
   outfit_semantic_dim: 512 # dimension of outfit embedding vector
-  backbone: alexnet # backbone for feature extractor
+  # backbone: alexnet # backbone for feature extractor
   hash_types: 3 # type of hash codes, current only use for item
   scale_tanh: true # use scale tanh
   use_semantic: false # use semantic features
@@ -60,13 +62,13 @@ solver_param:
     # lr: [10, 0.01, 0.1]
     # lr: [0.01, 0.001, 0.001, 0.01] # features, encoder_v, classifier_v, core
     lr:
-      features: 0.01
+      # features: 0.01
       encoder_v: 0.001
       encoder_o: 0.001      
       classifier_v: 0.001
       core: 0.01
     weight_decay:
-      features: 1.0e-05
+      # features: 1.0e-05
       encoder_v: 1.0e-05
       encoder_o: 1.0e-05      
       classifier_v: 1.0e-05
@@ -76,6 +78,6 @@ solver_param:
     scheduler_param:
       { cooldown: 10, factor: 0.5, patience: 10, threshold: 0.05 }
 
-load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
+# load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
 log_file: logs/train/fashion_hash_net_t3_outfitFashion_outfitSemantic.log
 log_level: DEBUG
