--- a/configs/train/FHN_VSE_T3_visual_new.yaml
+++ b/configs/train/FHN_VSE_T3_visual_new.yaml
@@ -3,16 +3,14 @@ data_param:
   data_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware # data root
   image_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware  # image root
   data_set: train # data set
-  outfit_desc: outfit_description # description embedding of outfits
   nega_mode: RandomOnline # negative outfits strategy
   num_workers: 2 # number of workers
   use_lmdb: true # use lmbd data
   use_semantic: false # use sentance data
   use_visual: true # use visual data
-  visual_encoding:  visual_encoding # item embedding storage
-  # cate_selection: ["top", "bottom", "bag", "outerwear", "footwear"]
-  cate_selection: ["top", "bottom", "bag", "outerwear", "accessory", "full-body", "footwear"]
-  transforms: false
+  use_outfit_semantic: true # whether to use outfit semantic
+  use_visual_embedding: false  # whether to use visual embedding
+  transforms: true
   num_pairwise: [2, 3, 4]
   using_max_num_pairwise: true
 
@@ -30,16 +28,20 @@ net_param:
   name: FashionNet
   num_users: 1 # number of users ##TODO: Later
   dim: 128 # dimension of binary codes
-  outfit_semantic_dim: 512 # dimension of outfit embedding vector
-  # backbone: alexnet # backbone for feature extractor
+  outfit_semantic_dim: 512 # dimension of outfit semantic vector
+  visual_embedding_dim: 512 # dimension of image embedding vector  
+  backbone: alexnet # backbone for feature extractor
   hash_types: 3 # type of hash codes, current only use for item
   scale_tanh: true # use scale tanh
   use_semantic: false # use semantic features
   use_visual: true # user visdual features
+  use_outfit_semantic: true # whether to use outfit semantic
+  use_visual_embedding: false  # whether to use visual embedding
   margin: 0.1 # margin for vse-loss, if exists
   shared_weight_network: true
   pairwise_weight: 1.0
   outfit_semantic_weight: 1.5
+  load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/old/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
 
 solver_param:
   name: "FashionNetSolver"
@@ -62,13 +64,13 @@ solver_param:
     # lr: [10, 0.01, 0.1]
     # lr: [0.01, 0.001, 0.001, 0.01] # features, encoder_v, classifier_v, core
     lr:
-      # features: 0.01
+      features: 0.01
       encoder_v: 0.001
       encoder_o: 0.001      
       classifier_v: 0.001
       core: 0.01
     weight_decay:
-      # features: 1.0e-05
+      features: 1.0e-05
       encoder_v: 1.0e-05
       encoder_o: 1.0e-05      
       classifier_v: 1.0e-05
@@ -78,6 +80,7 @@ solver_param:
     scheduler_param:
       { cooldown: 10, factor: 0.5, patience: 10, threshold: 0.05 }
 
-# load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
+
+
 log_file: logs/train/fashion_hash_net_t3_outfitFashion_outfitSemantic.log
 log_level: DEBUG
