--- a/configs/deploy/FHN_VSE_T3_visual_new.yaml
+++ b/configs/deploy/FHN_VSE_T3_visual_new.yaml
@@ -3,13 +3,14 @@ data_param:
   data_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware # data root
   image_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware  # image root
   data_set: train # data set
-  outfit_desc: outfit_description # description embedding of outfits
   nega_mode: RandomOnline # negative outfits strategy
   num_workers: 2 # number of workers
   use_lmdb: true # use lmbd data
   use_semantic: false # use sentance data
   use_visual: true # use visual data
-  transforms: False  # whether to augment image
+  use_outfit_semantic: true # whether to use outfit semantic
+  use_visual_embedding: false  # whether to use visual embedding
+  transforms: true
   num_pairwise: [2, 3, 4]
   using_max_num_pairwise: true
 
@@ -27,23 +28,25 @@ net_param:
   name: FashionNet
   num_users: 1 # number of users ##TODO: Later
   dim: 128 # dimension of binary codes
-  outfit_semantic_dim: 512 # dimension of outfit embedding vector
-  # backbone: alexnet # backbone for feature extractor
+  outfit_semantic_dim: 512 # dimension of outfit semantic vector
+  visual_embedding_dim: 512 # dimension of image embedding vector  
+  backbone: alexnet # backbone for feature extractor
   hash_types: 3 # type of hash codes, current only use for item
   scale_tanh: true # use scale tanh
   use_semantic: false # use semantic features
   use_visual: true # user visdual features
+  use_outfit_semantic: true # whether to use outfit semantic
+  use_visual_embedding: false  # whether to use visual embedding
   margin: 0.1 # margin for vse-loss, if exists
   shared_weight_network: true
   pairwise_weight: 1.0
   outfit_semantic_weight: 1.5
+  load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/fhn_t3_osem_best_11_26.pt
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/11_28_23/fhn_t3_osem_pretrained_best_11_28.pt
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/fhn_t3_osem_pretrained_allCate_best_11_28.pt
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/11_29_23/fhn_osem_allCate_11_29_best.pt
 
 gpus: [0]
-
-# load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/fhn_t3_osem_best_11_26.pt
-# load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/11_28_23/fhn_t3_osem_pretrained_best_11_28.pt
-# load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/fhn_t3_osem_pretrained_allCate_best_11_28.pt
-load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/11_29_23/fhn_osem_allCate_11_29_best.pt
 
 ## Deploy options
 # score_type_selection: "binary"
