--- a/configs/train/FHN_VSE_T3_visual_new.yaml
+++ b/configs/train/FHN_VSE_T3_visual_new.yaml
@@ -11,6 +11,7 @@ data_param:
   use_outfit_semantic: true # whether to use outfit semantic
   use_visual_embedding: false  # whether to use visual embedding
   transforms: true
+  cate_selection: [top, bottom, outerwear, bag, footwear] # [full-body, top, bottom, outerwear, bag, footwear, accessory]
   num_pairwise: [2, 3, 4]
   using_max_num_pairwise: true
 
