--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ TODO.txt
 .pyc
 checkpoints/
 reproducible_code/
-test_code/*
+notebooks/*
 
-!test_code/model_forward.py
-!test_code/evaluate_rank.py
-!test_code/evaluate_fitb.py
+!notebooks/model_forward.py
+!notebooks/evaluate_rank.py
+!notebooks/evaluate_fitb.py
