--- a/configs/deploy/FHN_VSE_T3_visual_new.yaml
+++ b/configs/deploy/FHN_VSE_T3_visual_new.yaml
@@ -41,6 +41,8 @@ net_param:
   shared_weight_network: true
   pairwise_weight: 1.0
   outfit_semantic_weight: 1.5
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/old/H4A_t3_allFashion_noSemantic_classify_best.net
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/old/H4A_t3_allFashion_noSemantic_classify_best.net  
   load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/11_26_23/fhn_t3_osem_best_11_26.pt
   # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/11_28_23/fhn_t3_osem_pretrained_best_11_28.pt
   # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion/checkpoints/fhn_t3_osem_pretrained_allCate_best_11_28.pt
@@ -50,6 +52,7 @@ gpus: [0]
 
 ## Deploy options
 hash_storage: storages/hash_apparels_11_26.pkl
+# hash_storage: storages/hanger_apparels_100.pkl
 score_type_selection: "binary"
 # score_type_selection: "latent"
 feature_type_selection: "visual"
