--- a/configs/eval/FHN_VSE_T3_fashion32.yaml
+++ b/configs/eval/FHN_VSE_T3_fashion32.yaml
@@ -1,4 +1,5 @@
 data_param:
+  phase: test
   batch_size: 2 # batch size, most ideal is 64
   data_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware # data root
   image_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware  # image root
@@ -15,15 +16,18 @@ data_param:
   num_pairwise: [2, 3, 4]
   using_max_num_pairwise: true
 
-train_data_param:
-  shuffle: true # do shuffle
-  data_mode: PairWise # output data format
-  phase: train # split
-
-test_data_param:
-  shuffle: false # do not shuffle
-  data_mode: PairWise # output data format
-  phase: val # split
+fitb_data_param:
+  phase: "test"
+  num_cand: 4
+  data_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware # data root
+  image_root: /home/dungmaster/Datasets/Fashion-Outfits-Theme-Aware  # image root
+  data_set: train # data set  
+  num_workers: 2 # number of workers
+  use_lmdb: true # use lmbd data
+  use_semantic: false # use sentance data
+  use_visual: true # use visual data
+  use_outfit_semantic: false # whether to use outfit semantic
+  cate_selection: [top, bottom, outerwear, bag, footwear] # [full-body, top, bottom, outerwear, bag, footwear, accessory]
 
 net_param:
   name: FashionNet
@@ -42,7 +46,8 @@ net_param:
   shared_weight_network: true
   pairwise_weight: 1.0
   outfit_semantic_weight: 1.5
-  load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/old/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
+  # load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/old/H4A_t3_allFashion_noSemantic_classify_best.net # manhdq
+  load_trained: /home/dungmaster/Projects/Machine Learning/HangerAI_outfits_recommendation_system/Hash4AllFashion_deploy/checkpoints/12_10_23/fhn_t3_ve_12_10_best.pt
 
 solver_param:
   name: "FashionNetSolver"
